# rustywind

./: Cargo.toml
rustywind/: Cargo.toml
rustywind/src/: lib.rs  options.rs
rustywind_cli/: Cargo.toml
rustywind_cli/src/: main.rs
src/: defaults.rs  main.rs  options.rs  parser.rs  sorter.rs  tests.rs
