[package]
authors = ["Praveen Perera <praveen@avencera.com>"]
edition = "2021"
license = "Apache-2.0"
name = "rustywind"
version = "0.19.0"

[dependencies]
# files
ignore = "0.4"

# utils
itertools = "0.11"
once_cell = "1.18"

# string matching
aho-corasick = "1.0"
regex = "1.9"

# logging
log = "0.4"

# parallel
rayon = "1.5"

# http
ureq = "2.7"

# errors
color-eyre = "0.6"
eyre = "0.6"

# json parsing
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
rustls = { version = "0.21.6", features = ["dangerous_configuration"] }

[dev-dependencies]
pretty_assertions = "1.4"

