[package]
authors = ["Praveen Perera <praveen@avencera.com>"]
edition = "2021"
license = "Apache-2.0"
name = "rustywind_cli"
version = "0.19.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# cli
clap = { version = "4.3", features = ["cargo", "derive", "unstable-styles"] }
indoc = "2.0"
anstyle = "1.0.1"

# errors
color-eyre = "0.6"
eyre = "0.6"

# logging
pretty_env_logger = "0.5.0"
log = "0.4"
